force-app/main/default/objects/Part__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the part approved?</description>
    <inlineHelpText>Is the part approved?</inlineHelpText>
    <label>Approved?</label>
    <type>Checkbox</type>
</CustomField>