force-app/main/default/objects/Part__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the car that owns this part</description>
    <inlineHelpText>Select the car that owns this part</inlineHelpText>
    <label>Car</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Parts</relationshipLabel>
    <relationshipName>Parts</relationshipName>
    <type>Lookup</type>
</CustomField>