force-app/main/default/objects/Part__c/fields/PartCost__c.field-meta.xml
<CustomField>
    <fullName>PartCost__c</fullName>
    <description>Enter the cost of this part</description>
    <inlineHelpText>Enter the cost of this part</inlineHelpText>
    <label>Part Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>